--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,6 +28,9 @@ android {
     ndkVersion flutter.ndkVersion
 
     compileOptions {
+        // Enable core library desugaring (REQUIRED for flutter_local_notifications)
+        coreLibraryDesugaringEnabled true
+        
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -64,4 +67,7 @@ flutter {
 
 dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
+    
+    // Core library desugaring dependency (REQUIRED for flutter_local_notifications)
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
 }
