--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,18 +31,19 @@ dependencies:
   
   # Wallpaper & Colors
   palette_generator: ^0.3.3+3
-  flutter_wallpaper_manager: ^0.0.3
+  wallpaper_manager_flutter: ^1.0.0
+
   image: ^4.1.3
   
   # Gestures & Interactions
   flutter_swipe_detector: ^2.0.0
   
   # Permissions
-  permission_handler: ^11.1.0
+  permission_handler: ^12.0.1
   
   # Device Info
   device_info_plus: ^9.1.1
-  package_info_plus: ^5.0.1
+  package_info_plus: 9.0.0
   
   # Voice (Future)
  # Comment out these two lines:
@@ -52,6 +53,9 @@ dependencies:
   # SVG & Icons
   flutter_svg: ^2.0.9
   cupertino_icons: ^1.0.6
+  flutter_local_notifications: ^18.0.1
+  speech_to_text: ^7.0.0  # or latest version
+  flutter_tts: ^4.2.3
 
 dev_dependencies:
   flutter_test:
